--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="hero">
+        <div class="header">
+            <h1>Header Text</h1>
+            <nav>
+                <a href="#">header link one</a>
+                <a href="#">header link two</a>
+                <a href="#">header link three</a>
+            </nav>
+        </div>
+        <div class="hero-content">
+            <div class="hero-left">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <button>Sign Up</button>
+            </div>
+            <img src="images/norwegian-forest-cat-main.jpg" alt="norwegian-forest-cat-main">
+        </div>
+    </div>
+    <div class="info">
+        <h1>Information</h1>
+    </div>
+    <div class="quote">
+        <blockquote>
+            <p>“It is impossible for a lover of cats to banish these alert, gentle, and discriminating friends, 
+                who give us just enough of their regard and complaisance to make us hunger for more.”</p>
+        </blockquote>
+        <strong>Agnus Repplier</strong>
+    </div>
+    <footer>
+        <p>Copyright &copy; The Odin Project</p>
+    </footer>
 </body>
 </html>
