--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <blockquote>
             <p>“It is impossible for a lover of cats to banish these alert, gentle, and discriminating friends, 
                 who give us just enough of their regard and complaisance to make us hunger for more.”</p>
+                <p class="quote-author">-Agnus Repplier</p>
         </blockquote>
-        <strong>Agnus Repplier</strong>
     </div>
     <footer>
         <p>Copyright &copy; The Odin Project</p>
