add call to action and change content

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 <body>
-    <div class="hero">
+    <header class="hero">
         <div class="header">
-            <h1>Header Text</h1>
+            <h1>Mejoo and Cats</h1>
             <nav>
                 <a href="#">header link one</a>
                 <a href="#">header link two</a>
@@ -19,15 +20,33 @@
         </div>
         <div class="hero-content">
             <div class="hero-left">
-                <h1>This website is awesome</h1>
+                <h1>Mejoo and her cats are awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
                 <button>Sign Up</button>
             </div>
-            <img src="images/norwegian-forest-cat-main.jpg" alt="norwegian-forest-cat-main">
+            <img src="images/mejoo.jpg" alt="Kim Mejoo">
         </div>
-    </div>
+    </header>
     <div class="info">
-        <h1>Information</h1>
+        <h1>Mejoo's Cats</h1>
+        <div class="figures">
+            <figure>
+                <img src="images/Hyuji.gif" alt="Hyuji">
+                <figcaption>Hyuji</figcaption>
+            </figure>
+            <figure>
+                <img src="images/Bongji.gif" alt="Bongji">
+                <figcaption>Bongji</figcaption>
+            </figure>
+            <figure>
+                <img src="images/Monji.gif" alt="Monji">
+                <figcaption>Monji</figcaption>
+            </figure>
+            <figure>
+                <img src="images/Yoji.gif" alt="Yoji">
+                <figcaption>Yoji</figcaption>
+            </figure>
+        </div>
     </div>
     <div class="quote">
         <blockquote>
@@ -36,8 +55,20 @@
                 <p class="quote-author">-Agnus Repplier</p>
         </blockquote>
     </div>
+    <div class="cta-container">
+        <div class="cta">
+            <div class="cta-txt">
+                <h2>Call to action! It's time!</h2>
+                <p>Sign up for our product by clicking that button over there!</p>
+            </div>
+            <button class="cta-btn"><a href="https://www.youtube.com/c/MejooandCats" target="_blank" rel="noreferrer noopener">Subscribe</a></button>
+        </div>
+        <p>Live in South Korea? Check out her caf&eacute;!</p>
+    </div>
     <footer>
-        <p>Copyright &copy; The Odin Project</p>
+        <p>Copyright &copy; The Odin Project 2021</p>
+        <p>Kelvin Nguyen</p>
+        <a href="https://github.com/KelTamNguyen" target="_blank" rel="noreferrer noopener"><i class="fab fa-github fa-2x"></i></a>
     </footer>
 </body>
 </html>
