refactor using semantic html

--- a/index.html
+++ b/index.html
@@ -9,62 +9,66 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 <body>
-    <header class="hero">
-        <div class="header">
-            <h1>Mejoo and Cats</h1>
-            <nav>
-                <a href="#">header link one</a>
-                <a href="#">header link two</a>
-                <a href="#">header link three</a>
-            </nav>
-        </div>
-        <div class="hero-content">
-            <div class="hero-left">
-                <h1>Mejoo and her cats are awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button>Sign Up</button>
+    <header>
+        <h1>Mejoo and Cats</h1>
+        <nav>
+            <a href="#">header link one</a>
+            <a href="#">header link two</a>
+            <a href="#">header link three</a>
+        </nav>
+    </header>
+    
+    <main>
+        <section class="welcome">
+            <div class="welcome-text">
+                <h1>Mejoo and Cats is an awesome Youtube channel</h1>
+                <p>Come for the 4 cats. Stay for the 2 Humans :D</p>
+                <button><i class="fab fa-youtube fa-2x"></i><a href="https://www.youtube.com/c/MejooandCats" target="_blank" rel="noreferrer noopener">Subscribe</a></button>
             </div>
             <img src="images/mejoo.jpg" alt="Kim Mejoo">
-        </div>
-    </header>
-    <div class="info">
-        <h1>Mejoo's Cats</h1>
-        <div class="figures">
-            <figure>
-                <img src="images/Hyuji.gif" alt="Hyuji">
-                <figcaption>Hyuji</figcaption>
-            </figure>
-            <figure>
-                <img src="images/Bongji.gif" alt="Bongji">
-                <figcaption>Bongji</figcaption>
-            </figure>
-            <figure>
-                <img src="images/Monji.gif" alt="Monji">
-                <figcaption>Monji</figcaption>
-            </figure>
-            <figure>
-                <img src="images/Yoji.gif" alt="Yoji">
-                <figcaption>Yoji</figcaption>
-            </figure>
-        </div>
-    </div>
-    <div class="quote">
-        <blockquote>
-            <p>“It is impossible for a lover of cats to banish these alert, gentle, and discriminating friends, 
-                who give us just enough of their regard and complaisance to make us hunger for more.”</p>
-                <p class="quote-author">-Agnus Repplier</p>
-        </blockquote>
-    </div>
-    <div class="cta-container">
-        <div class="cta">
-            <div class="cta-txt">
-                <h2>Call to action! It's time!</h2>
-                <p>Sign up for our product by clicking that button over there!</p>
+        </section>
+
+        <section class="info">
+            <h1>Mejoo's Cats</h1>
+            <div class="figures">
+                <figure>
+                    <img src="images/Monji.gif" alt="Monji">
+                    <figcaption>Monji(먼지)</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/Bongji.gif" alt="Bongji">
+                    <figcaption>Bongji(봉지)</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/Hyuji.gif" alt="Hyuji">
+                    <figcaption>Hyuji(휴지)</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/Yoji.gif" alt="Yoji">
+                    <figcaption>Yoji(요지)</figcaption>
+                </figure>
             </div>
-            <button class="cta-btn"><a href="https://www.youtube.com/c/MejooandCats" target="_blank" rel="noreferrer noopener">Subscribe</a></button>
-        </div>
-        <p>Live in South Korea? Check out her caf&eacute;!</p>
-    </div>
+        </section>
+
+        <section class="quote">
+            <blockquote>
+                <p>“It is impossible for a lover of cats to banish these alert, gentle, and discriminating friends, 
+                    who give us just enough of their regard and complaisance to make us hunger for more.”</p>
+                    <p class="quote-author">-Agnus Repplier</p>
+            </blockquote>
+        </section>
+
+        <section class="cta-container">
+            <div class="cta">
+                <div class="cta-txt">
+                    <h2>Call to action! It's time!</h2>
+                    <p>Sign up for our product by clicking that button over there!</p>
+                </div>
+                <button class="cta-btn"><i class="fab fa-youtube fa-2x"></i><a href="https://www.youtube.com/c/MejooandCats" target="_blank" rel="noreferrer noopener">Subscribe</a></button>
+            </div>
+        </section>
+    </main>
+    
     <footer>
         <p>Copyright &copy; The Odin Project 2021</p>
         <p>Kelvin Nguyen</p>
