update call to action

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <section class="cta-container">
             <div class="cta">
                 <div class="cta-txt">
-                    <h2>Call to action! It's time!</h2>
-                    <p>Sign up for our product by clicking that button over there!</p>
+                    <h2>Call to action! It's time to subscribe!</h2>
+                    <p>Subscribe (or at least watch a video :D) to Mejoo and Cats by pressing the button over there!</p>
                 </div>
                 <button class="cta-btn"><i class="fab fa-youtube fa-2x"></i><a href="https://www.youtube.com/c/MejooandCats" target="_blank" rel="noreferrer noopener">Subscribe</a></button>
             </div>
